--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 					 navigator.splashscreen.hide();
 					 $.mobile.loading("show", {text: 'loading',textVisible: true,theme: 'b',html: '<img src="css/loading.gif" style="width:40%;margin-left: 30%;" />'});
 					 // base url for dashboard
-					 //localStorage.base_url = 'http://leanstaffing.com/trackngo';
-					 localStorage.base_url = 'http://leanstaffing.com/trackngo2';
+					 localStorage.base_url = 'http://leanstaffing.com/trackngo';
+					 //localStorage.base_url = 'http://leanstaffing.com/trackngo2';
 					 // Url to save data into database
 					 localStorage.save_url = 'http://leanstaffing.com/testserver2';
 					 localStorage.files = 'http://leanstaffing.com/tkgo_files';
