removing all the other traces

--- a/index.html
+++ b/index.html
@@ -1808,7 +1808,7 @@ localStorage.comma = "'";
 							  //----- After being Closed and Reopened ---//
 						   if(localStorage.tobecontinued == 1){
 							      localStorage.double_trace_mark = 1;
-							      trace_load2();
+							      //trace_load2();
 								  //alert('tobecontinued == 1')
 								  localStorage.tobecontinued = 0;
 							   }
@@ -1882,7 +1882,7 @@ localStorage.comma = "'";
 															}else{
 														   // alert('trace_load activated')
 														    if(localStorage.double_trace_mark == 1){}else{
-															     trace_load();
+															     //trace_load();
 																 //alert('I got inside trace 2');
 														   }
 														}
@@ -1990,7 +1990,7 @@ localStorage.comma = "'";
 														if(localStorage.load_hid == localStorage.load_hid_2){
 															}else{
 														   // alert('trace_load activated')
-															trace_load();
+															//trace_load();
 														}
 													}
 												if(localStorage.inactive == 1){}else{
@@ -2565,7 +2565,7 @@ $('#page2').on('pageshow',function(e,data){
 							}else{
 						   // alert('trace_load activated')
 						   	if(localStorage.double_trace_mark == 1){}else{
-								 trace_load();
+								 //trace_load();
 								 //alert('I got inside trace 3');
 							};
 						}
