--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 					 // Url to save data into database
 					 //localStorage.save_url = 'http://leanstaffing.com/testserver2';
 					 localStorage.save_url = 'http://leanstaffing.com/testserver3';
-					 localStorage.files = 'http://leanstaffing.com/tkgo_files';
+					 //localStorage.files = 'http://leanstaffing.com/tkgo_files';
+					 localStorage.files = 'http://leanstaffing.com/tkgo_files2';
 					 localStorage.load_hid;
 					 localStorage.load_id_bol;
 					 localStorage.start;
